<resources>
    <string name="app_name">Elunautleja_App</string>
    <string name="logo">Enjoy Life App logo</string>
    <string name="first_name">Enter first name</string>
    <string name="ex_firstName">Mary</string>
    <string name="enter_lastname">Enter last name</string>
    <string name="ex_lastName">Smith</string>
    <string name="enter_username">Enter username</string>
    <string name="ex_email">example@gmail.com</string>
    <string name="enter_password">Enter password</string>
    <string name="ex_password">qwerty123</string>
    <string name="login">Login</string>
    <string name="recipe">What to eat?</string>
    <string name="main">Welcome!</string>
    <string name="nur">New user registration</string>
    <string name="reg_user">Register user</string>
    <string name="user_info">User details</string>
    <string name="logout">Logout</string>
    <string name="error">Error! %1$s</string>
    <string name="missing">Missing field</string>
    <string name="passLength">6</string>
    <string name="noMatch">Doesn\'t match</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>